# libgmsd

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
include/: convolve.h  kernel.h  libgmsd.h  matrix.h  sample.h
src/: convolve.c  kernel.c  libgmsd.c  matrix.c  sample.c
test/: main.c
